--- a/package.json
+++ b/package.json
@@ -11,21 +11,26 @@
   "license": "BSD-3",
   "dependencies": {
     "@apollo/client": "^3.3.15",
+    "@bondappetit/networks": "^2.0.6",
     "@types/dotenv": "^8.2.0",
+    "bignumber.js": "^9.0.1",
     "config": "^3.3.6",
     "dotenv": "^8.2.0",
     "got": "^11.8.2",
     "knex": "^0.95.4",
     "mustache": "^4.2.0",
     "node-telegram-bot-api": "^0.52.0",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
-    "@types/mustache": "^4.1.1",
+    "@types/bignumber.js": "^5.0.0",
     "@types/config": "^0.0.36",
     "@types/express": "^4.17.8",
+    "@types/mustache": "^4.1.1",
     "@types/node": "^14.10.1",
     "@types/node-telegram-bot-api": "^0.51.1",
+    "@types/web3": "^1.2.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
